--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
             </div>
             <!--ZONA DE BUSQUEDA PARA LOS MANUALES-->
             <div>
-                <button class="buscar" >Buscar</button>
+                <button class="buscar" (click)="goToManualList()">Buscar</button>
             </div>
         </div>
         <!--TITULO DE LOS ENLACES MOVIMIENTO RAPIDO-->
