--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,11 +15,11 @@
         <div class="image-section">
             <!--ZONA DE BOTON QUE TE ENVIA A LA PESTAÑA DE INTRODUCCION-->
             <div class="int-but">
-                <button class="image-button">Introduccion</button>
+                <button class="image-button" (click)="goToIntro()">Introduccion</button>
             </div>
             <!--IMAGEN DE LA EMPRESA-->
             <div>
-                <img src="../../Imagenes/Logo.jpg" alt="Imagen Representativa" class="main-image">
+                <img src="../../assets/logo.png" alt="Imagen Representativa" class="main-image">
             </div>
             <!--ZONA DE BUSQUEDA PARA LOS MANUALES-->
             <div>
@@ -37,17 +37,17 @@
         </div>
         <!--botones de envio a manuales-->
         <div class="circular-buttons">
-          <button class="circular-button"><img src="../../Imagenes/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../Imagenes/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../Imagenes/proceso.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../Imagenes/politica.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="../../assets/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="../../assets/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="../../assets/proceso.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="../../assets/politica.png" alt="icon" class="display-settings-icon"></button>
           <!--<button class="circular-button">5</button>-->
         </div>
         <div>
             <p class="txtb">M.P.D.P</p>
             <p class="txtb">M.P&P</p>
             <p class="txtb">M.P.R</p>
-            <p class="txtb">M. POL</p>
+            <p class="txtb">M.POL</p>
         </div>
       </div>      
 </body>
