--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <!-- Logo en la parte superior izquierda -->
-    <img src="../../Imagenes/Logo.jpg" alt="Logo DSD" class="logo">
+    <img src="../../assets/logo.png" alt="Logo DSD" class="logo">
     <div class="intro-container">
         <!-- Texto representativo (simulación del manual) -->
         <h2>mision:</h2>
@@ -25,7 +25,6 @@
         <footer>
             <a (click)="goBack()" class="back-link">Volver</a>
         </footer>
-    </div>
-      
+    </div>    
 </body>
 </html>
