--- a/src/app/manual-list/manual-list.component.html
+++ b/src/app/manual-list/manual-list.component.html
@@ -9,7 +9,7 @@
 <body>
     <div class="manual-list-container">
         <!-- Logo en la parte superior izquierda -->
-        <img src="../../Imagenes/Logo.jpg" alt="Logo DSD" class="logo">
+        <img src="../../assets/logo.png" alt="Logo DSD" class="logo">
       
         <!-- Lista de manuales -->
         <div class="manual-list">
@@ -17,7 +17,7 @@
           <button class="manual-button">Manual de políticas y procedimientos</button>
           <button class="manual-button">Manual de Procesos</button>
           <button class="manual-button">Manual de políticas</button>
-          <button class="manual-button">Volver</button>
+          <button class="manual-button"(click)="goToStar()">Volver</button>
         </div>
       
         <!-- Botones de Descargar y Selección de Manual -->
