--- a/src/app/manual-pyp/manual-pyp.component.css
+++ b/src/app/manual-pyp/manual-pyp.component.css
@@ -1,55 +1,61 @@
 .manual-detail-container {
-    padding: 20px;
-    text-align: left;
-    position: relative;
-  }
+  padding: 20px;
+  text-align: left;
+  position: relative;
+}
   
-  .logo {
-    width: 80px;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-  }
+.logo {
+  width: 80px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
   
-  h1 {
-    font-size: 48px;
-    margin-top: 80px;
-    align-items: center;
-  }
+h1 {
+  font-size: 48px;
+  margin-top: 80px;
+  align-items: center;
+}
   
-  h2 {
-    font-size: 28px;
-    margin-bottom: 20px;
-  }
+h2 {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
   
-  .indice {
-    margin-bottom: 40px;
-  }
+.indice {
+  margin-bottom: 40px;
+}
   
-  .indice h3 {
-    font-size: 24px;
-  }
+.indice h3 {
+  font-size: 24px;
+}
   
-  .indice ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
+.indice ul {
+  list-style-type: none;
+  padding-left: 0;
+}
   
-  .indice li {
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
+.indice li {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
   
-  .manual-actions {
-    display: flex;
-    gap: 20px;
-    justify-content: flex-start;
-  }
+.manual-actions {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-start;
+}
   
-  .action-button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #e0e0e0;
-    font-size: 16px;
-    cursor: pointer;
-  }  
+.action-button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #e0e0e0;
+  font-size: 16px;
+  box-shadow: 0px 0px 5px 0px #333;
+}  
+
+.action-button:hover{
+  cursor: pointer;
+  background-color: #999;
+  box-shadow: 0px 0px 10px 0px #333;
+}
