--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
             </div>
             <!--IMAGEN DE LA EMPRESA-->
             <div>
-                <img src="../../assets/logo.png" alt="Imagen Representativa" class="main-image">
+                <img src="/logo.png" alt="Imagen Representativa" class="main-image">
             </div>
             <!--ZONA DE BUSQUEDA PARA LOS MANUALES-->
             <div>
@@ -37,10 +37,10 @@
         </div>
         <!--botones de envio a manuales-->
         <div class="circular-buttons">
-          <button class="circular-button"><img src="../../assets/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../assets/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../assets/proceso.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="../../assets/politica.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="/proceso.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button"><img src="/politica.png" alt="icon" class="display-settings-icon"></button>
           <!--<button class="circular-button">5</button>-->
         </div>
         <div>
