--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <!-- Logo en la parte superior izquierda -->
-    <img src="../../assets/logo.png" alt="Logo DSD" class="logo">
+    <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
     <div class="intro-container">
         <!-- Texto representativo (simulación del manual) -->
         <h2>mision:</h2>
