--- a/src/app/manual-pyp/manual-pyp.component.html
+++ b/src/app/manual-pyp/manual-pyp.component.html
@@ -9,7 +9,7 @@
 <body>
     <div class="manual-detail-container">
         <!-- Logo en la parte superior izquierda -->
-        <img src="../../assets/logo.png" alt="Logo DSD" class="logo">
+        <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
       
         <!-- Título del manual -->
         <h1>Manual de Perfiles y descripciones de puesto</h1>
