--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@
         <!--botones de envio a manuales-->
         <div class="circular-buttons">
           <button class="circular-button"><img src="/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
+          <button class="circular-button" (click)="goToPYP()"><img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
           <button class="circular-button"><img src="/proceso.png" alt="icon" class="display-settings-icon"></button>
           <button class="circular-button"><img src="/politica.png" alt="icon" class="display-settings-icon"></button>
           <!--<button class="circular-button">5</button>-->
