--- a/src/app/manual-list/manual-list.component.html
+++ b/src/app/manual-list/manual-list.component.html
@@ -9,7 +9,7 @@
 <body>
     <div class="manual-list-container">
         <!-- Logo en la parte superior izquierda -->
-        <img src="../../assets/logo.png" alt="Logo DSD" class="logo">
+        <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
       
         <!-- Lista de manuales -->
         <div class="manual-list">
