--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,15 +39,15 @@
         <div class="circular-buttons">
           <button class="circular-button"><img src="/panel-de-control.png" alt="icon" class="display-settings-icon"></button>
           <button class="circular-button" (click)="goToPYP()"><img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon"></button>
-          <button class="circular-button"><img src="/proceso.png" alt="icon" class="display-settings-icon"></button>
           <button class="circular-button"><img src="/politica.png" alt="icon" class="display-settings-icon"></button>
+          <!--<button class="circular-button"><img src="/proceso.png" alt="icon" class="display-settings-icon"></button>-->
           <!--<button class="circular-button">5</button>-->
         </div>
         <div>
             <p class="txtb">M.P.D.P</p>
             <p class="txtb">M.P&P</p>
-            <p class="txtb">M.P.R</p>
             <p class="txtb">M.POL</p>
+            <!--<p class="txtb">M.P.R</p>-->
         </div>
       </div>      
 </body>
