--- a/src/app/pyp-department/pyp-department.component.html
+++ b/src/app/pyp-department/pyp-department.component.html
@@ -1,1 +1,29 @@
-<p>pyp-department works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Departamento</title>
+</head>
+<link rel="stylesheet" href="pyp-department.component.css">
+<body>
+    <div class="container">
+        <header>
+          <img src="/logo.png" alt="Logo de la empresa" class="logo" (click)="goHome()">
+          <h1>Manual de Perfiles y descripciones de puesto</h1>
+          <h2>Departamento 1</h2>
+        </header>
+      
+        <div class="profiles-grid">
+          <button class="profile-btn" *ngFor="let perfil of perfiles" (click)="goToProfile(1)">{{ perfil }}</button>
+        </div>
+      
+        <div class="action-buttons">
+          <button class="btn" (click)="goBack()">Volver</button>
+          <button class="btn">Descargar</button>
+          <button class="btn">Organigrama</button>
+        </div>
+      </div>
+      
+</body>
+</html>
