--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -23,6 +23,7 @@
             </p>
         </div>
         <footer>
+            <!--Boton de volver-->
             <a (click)="goBack()" class="back-link">Volver</a>
         </footer>
     </div>    
