--- a/src/app/manual-list/manual-list.component.css
+++ b/src/app/manual-list/manual-list.component.css
@@ -1,17 +1,18 @@
+/*Contenedor de los botones principales*/
 .manual-list-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
 }
-
+/*Logo de la parte superior*/
 .logo {
   width: 100px;
   position: absolute;
   top: 20px;
   left: 20px;
 }
-
+/*Lista de manuales*/
 .manual-list {
   margin-top: 60px;
   display: flex;
@@ -19,7 +20,7 @@
   gap: 15px;
   width: 60%;
 }
-
+/*botones de la seleccion de manuales*/
 .manual-button {
   padding: 15px;
   border: none;
@@ -35,13 +36,13 @@
   background-color: #aaa;
   box-shadow: 0px 0px 10px 0px #333;
 }
-
+/*boton de descarga*/
 .manual-actions {
   display: flex;
   gap: 20px;
   margin-top: 20px;
 }
-
+/*seleccion*/
 .action-button {
   padding: 10px 20px;
   border: none;
