--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" href="login.component.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-box">
-          <img src="../../Imagenes/Logo.jpg" alt="Imagen de la Empresa" class="company-logo">
-          <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-            <div class="form-group">
-              <label for="username">Usuario:</label>
-              <input type="text" id="username" name="username" [(ngModel)]="username" required>
-            </div>
-            <div class="form-group">
-              <label for="password">Contraseña:</label>
-              <input type="password" id="password" name="password" [(ngModel)]="password" required>
-            </div>
-            <button type="submit">Iniciar Sesión</button>
-          </form>
-        </div>
-      </div>      
+  <div class="login-container">
+    <div class="login-box">
+        <img src="/logo.png" alt="Logo DSD" class="logo">
+        <h2>Bienvenido al manual de  Distribuciones A Detalle</h2>
+        <p>Inicie sesión, por favor.</p>
+        <form action="/login" method="POST">
+            <input type="text" name="username" placeholder="Usuario" required>
+            <input type="password" name="password" placeholder="Contraseña" required>
+            <button type="submit">Iniciar sesión</button>
+        </form>
+        <a href="#" class="forgot-password">¿Olvidó su contraseña?</a>
+    </div>
+</div>     
 </body>
 </html>
