--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -80,6 +80,10 @@
   font-weight: bold;
 }
 
+.quick-access :hover{
+  cursor: pointer;
+}
+
 /* Botones circulares */
 .circular-buttons {
   display: flex;
