--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         </div>
         <!--Enlaces para las otras pantallas de organigramas y perfiles-->
         <div class="quick-access">
-          <a href="#">Organigrama</a>
+          <a (click)="goToOrganigrama()">Organigrama</a>
           <a href="#">Perfiles</a>
         </div>
         <!--botones de envio a manuales-->
