--- a/src/app/pyp-department/pyp-department.component.html
+++ b/src/app/pyp-department/pyp-department.component.html
@@ -25,7 +25,7 @@
           <!--Botones de acciones-->
           <button class="btn" (click)="goBack()">Volver</button>
           <button class="btn">Descargar</button>
-          <button class="btn">Organigrama</button>
+          <button class="btn" (click)="gotoOrganigrama()">Organigrama</button>
         </div>
       </div>
       
