--- a/src/app/manual-pyp/manual-pyp.component.html
+++ b/src/app/manual-pyp/manual-pyp.component.html
@@ -17,19 +17,27 @@
         <!-- Índice del manual -->
         <h2>Indice</h2>
         <div class="indice">
-          <h3 (click)="goToDepartment(1)">Departamento 1</h3>
+          <h3 (click)="goToDepartment(1)">SAC</h3>
           <ul>
-            <li (click)="goToProfile(1)">Perfil 1</li>
-            <li (click)="goToProfile(2)">Perfil 2</li>
-            <li (click)="goToProfile(3)">Perfil 3</li>
-            <li (click)="goToProfile(4)">Perfil 4</li>
+            <li (click)="goToProfile(1)">Auditor interno operativo de cedis</li>
+            <li (click)="goToProfile(2)">Auxiliar de inventario</li>
+            <li (click)="goToProfile(3)">Auxiliar de operaciones</li>
+            <li (click)="goToProfile(4)">Compras</li>
+            <li (click)="goToProfile(5)">Aux. Administrativo (Iniciativas)</li>
+            <li (click)="goToProfile(6)">Aux. Administrativo Operaciones CEDIS</li>
+            <li (click)="goToProfile(7)">Capacitador de administrativo de CEDIS</li>
+            <li (click)="goToProfile(8)">Gestor De Cartera</li>
+            <li (click)="goToProfile(9)">Aux. Administrativo (Cartera)</li>
+            <li (click)="goToProfile(10)">Auditor Interno Operativo de CEDIS</li>
+            <li (click)="goToProfile(11)">Coordinador Logística Kiosko</li>
+            <li (click)="goToProfile(12)">Aux. Administrativo  (Logística Kiosko)</li>
           </ul>
       
-          <h3 (click)="goToDepartment(2)">Departamento 2</h3>
+          <!-- <h3 (click)="goToDepartment(2)">Departamento 2</h3>
           <ul>
-            <li (click)="goToProfile(5)">Perfil 1</li>
-            <li (click)="goToProfile(6)">Perfil 2</li>
-          </ul>
+            <li (click)="goToProfile(21)">Perfil 1</li>
+            <li (click)="goToProfile(22)">Perfil 2</li>
+          </ul> -->
         </div>
       
         <!-- Botones de Volver y Descargar -->
