--- a/src/app/pyp-department/pyp-department.component.html
+++ b/src/app/pyp-department/pyp-department.component.html
@@ -13,7 +13,7 @@
           <!--logo que te llevan al inicio-->
           <img src="/logo.png" alt="Logo de la empresa" class="logo" (click)="goHome()">
           <h1>Manual de Perfiles y descripciones de puesto</h1>
-          <h2>Departamento 1</h2>
+          <h2>Sac</h2>
         </header>
         
         <div class="profiles-grid">
