--- a/src/app/pyp-profile/pyp-profile.component.html
+++ b/src/app/pyp-profile/pyp-profile.component.html
@@ -8,7 +8,15 @@
 </head>
 <body>
       <div class="pdf-container">
-      <img src="/PDFIMG.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno1.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno2.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno3.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno4.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno5.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno6.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno7.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno8.jpeg" class="" style="display: block;">
+      <img src="/Auditor-interno-operativo-de-cedis/AuditorInterno9.jpeg" class="" style="display: block;">
       <!-- comentado para no causar errores a futuro
        <!--Funcion de la libreria de ng2-pdf-viewer para ver el pdf en cuestion-- .... cerrar aqui el comentario xp
         <pdf-viewer [src]="pdfSrc" 
