--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
           <!--<button class="circular-button">5</button>-->
         </div>
         <div>
-            <p class="txtb">M.P.D.P</p>
+            <p class="txtb">M.D.P.P</p>
             <p class="txtb">M.P&P</p>
             <p class="txtb">M.POL</p>
             <!--<p class="txtb">M.P.R</p>-->
