--- a/src/app/pyp-profile/pyp-profile.component.css
+++ b/src/app/pyp-profile/pyp-profile.component.css
@@ -5,6 +5,11 @@
   align-items: center;
   display: block;
 }
+
+.centrar{
+  text-align: center;
+}
+
 /*Botones de accion*/
 .action-buttons {
   display: flex;
