--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,12 +12,16 @@
             <img src="/logo.png" alt="Logo DSD" class="logo">
             <h2>Bienvenido al manual de  Distribuciones A Detalle</h2>
             <p>Inicie sesión, por favor.</p>
-            <form action="/login" method="POST">
-                <input type="text" name="username" placeholder="Usuario" required>
-                <input type="password" name="password" placeholder="Contraseña" required>
+            <form (ngSubmit)="onSubmit()">
+                <label for="username">Usuario:</label>
+                <input type="text" id="username" [(ngModel)]="username" name="username" required />
+                
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" [(ngModel)]="password" name="password" required />
+            
                 <button type="submit">Iniciar sesión</button>
             </form>
-            <a href="#" class="forgot-password">¿Olvidó su contraseña?</a>
+            <!-- <a href="#" class="forgot-password">¿Olvidó su contraseña?</a> -->
         </div>
     </div>     
 </body>
