--- a/src/app/manual-pyp/manual-pyp.component.css
+++ b/src/app/manual-pyp/manual-pyp.component.css
@@ -35,7 +35,7 @@ h2 {
   padding-left: 0;
 }
 
-.indice ul :hover{
+.indice ul:hover{
   cursor: pointer;
 }
   
@@ -44,10 +44,14 @@ h2 {
   margin-bottom: 5px;
 }
 
-.indice li :hover{
+.indice li:hover{
   cursor: pointer;
 }
   
+.select:hover{
+  color:blue;
+}
+
 .manual-actions {
   display: flex;
   gap: 20px;
