--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -24,7 +24,7 @@
         </div>
         <footer>
             <!--Boton de volver-->
-            <a (click)="goBack()" class="back-link">Volver</a>
+            <a (click)="goBack()" class="back-link">← Volver</a>
         </footer>
     </div>    
 </body>
