--- a/src/app/perfiles/perfiles.component.html
+++ b/src/app/perfiles/perfiles.component.html
@@ -33,6 +33,11 @@
             <p>No hay puestos para este departamento.</p>
         </div>
 
+        <div class="matriz">
+            <img src="/MatrizPuestos1.jpg" alt="">
+            <img src="/MatrizPuestos2.jpg" alt="">
+        </div>
+
         <!-- Botón de volver -->
         <div class="footer">
             <a (click)="goBack()" class="back-link">← Volver</a>
