--- a/src/app/perfiles/perfiles.component.css
+++ b/src/app/perfiles/perfiles.component.css
@@ -1,4 +1,5 @@
 /* Estilos generales */
+/* Estilos generales */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -52,6 +53,24 @@ body {
 .puestos {
     font-size: 14px;
     color: #333;
+}
+
+/* Sección para las imágenes de la matriz */
+.matriz {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.matriz img {
+    max-width: 100%; /* Las imágenes no serán más anchas que el contenedor */
+    /* max-height: 500px; Controlamos la altura máxima */
+    object-fit: contain; /* Asegura que la imagen mantenga sus proporciones */
+    border: 1px solid #ccc; /* Opcional: Añadir borde */
+    border-radius: 5px; /* Opcional: Añadir bordes redondeados */
 }
 
 /* Pie de página con el enlace de volver */
