--- a/src/app/organigrama/organigrama.component.html
+++ b/src/app/organigrama/organigrama.component.html
@@ -9,16 +9,33 @@
 <body>
   <div class="organigrama-container">
     <!-- Logo en la parte superior izquierda -->
-    <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
+    <div>
+      <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
+    </div>
       
-    <nav class="departamentos-menu">
-      <button *ngFor="let departamento of departamentos" (click)="cambiarOrganigrama(departamento)">
-        {{ departamento.nombre }}
-      </button>
-    </nav>
+    <!-- Barra de navegación con los departamentos -->
+    <div class="navbar-container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item" *ngFor="let departamento of departamentos">
+              <button class="nav-link-btn-btn-link" (click)="seleccionarDepartamento(departamento.ID_Departamento)">
+                {{ departamento.Departamento_Nombre }}
+              </button>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     
-    <div class="organigrama-display">
-      <img *ngIf="organigramaSeleccionado" [src]="organigramaSeleccionado" alt="Organigrama">
+    <!-- Mensaje si no hay documento -->
+    <div *ngIf="mensaje" class="alert alert-warning mt-3">
+      {{ mensaje }}
+    </div>
+
+    <!-- Visor de PDF -->
+    <div class="pdf-viewer mt-4" *ngIf="documentoRuta">
+      <iframe [src]="documentoRuta" width="80%" height="500px"></iframe>
     </div>
   </div>          
 </body>
