--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -13,6 +13,10 @@
   top: 20px;
   left: 20px;
 }
+
+.logo:hover{
+  cursor: pointer;
+}
   
 /* Contenido del texto */
 .text-content {
@@ -41,6 +45,7 @@
 }
 
 .back-link:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
   
