--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
     </div>
     <!--TITULO DE LOS ENLACES MOVIMIENTO RAPIDO-->
     <div class="subtitle-section">
-      <h2>Acceso Rapidos</h2>
+      <h2>Accesos Rapidos</h2>
     </div>
     <!--Enlaces para las otras pantallas de organigramas y perfiles-->
     <!-- <div class="quick-access">
