--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
       </div>
       <!--ZONA DE BUSQUEDA PARA LOS MANUALES-->
       <div>
-        <button class="buscar" (click)="goToManualList()">Buscar</button>
+        <button class="search" (click)="goToManualList()">Buscar</button>
       </div>
     </div>
     <!--TITULO DE LOS ENLACES MOVIMIENTO RAPIDO-->
@@ -37,35 +37,35 @@
     </div> -->
     <!--botones de envio a manuales-->
     <div class="circular-buttons">
-      <div class="acceso-rapido">
+      <div class="quick-access">
         <button class="circular-button" (click)="goToOrganigrama()">
           <img src="/organigrama.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Organigrama</p>
       </div>
     
-      <div class="acceso-rapido">
+      <div class="quick-access">
         <button class="circular-button" (click)="goToPYP()">
           <img src="/panel-de-control.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Manual de Descriptivos y perfiles de puesto</p>
       </div>
     
-      <div class="acceso-rapido">
+      <div class="quick-access">
         <button class="circular-button">
           <img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Manual de políticas y procedimientos</p>
       </div>
     
-      <div class="acceso-rapido">
+      <div class="quick-access">
         <button class="circular-button">
           <img src="/politica.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Manual de políticas</p>
       </div>
     
-      <div class="acceso-rapido">
+      <div class="quick-access">
         <button class="circular-button" (click)="goToPerfiles()">
           <img src="/usuario.png" alt="icon" class="display-settings-icon">
         </button>
