--- a/src/app/pyp-profile/pyp-profile.component.html
+++ b/src/app/pyp-profile/pyp-profile.component.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="pyp-profile.component.css">
 </head>
 <body>
-  <div *ngIf="documento">
+  <div *ngIf="document">
     <h3>Documento relacionado con el puesto</h3>
     <p class="centrar">
-      <iframe [src]="documentoRuta" width="1200" height="800"></iframe>
+      <iframe [src]="documentRoute" width="1200" height="800"></iframe>
     </p>
   </div>
       
