--- a/src/app/pyp-profile/pyp-profile.component.html
+++ b/src/app/pyp-profile/pyp-profile.component.html
@@ -9,7 +9,7 @@
 <body>
   <div *ngIf="document">
     <h3>Documento relacionado con el puesto</h3>
-    <p class="centrar">
+    <p class="center">
       <iframe [src]="documentRoute" width="1200" height="800"></iframe>
     </p>
   </div>
