--- a/src/app/manual-pyp/manual-pyp.component.html
+++ b/src/app/manual-pyp/manual-pyp.component.html
@@ -16,7 +16,7 @@
   
     <!-- Índice del manual -->
     <h2>Indice</h2>
-    <div class="indice">
+    <div class="index">
       <ul>
         <li *ngFor="let department of department">
           <div (click)="toggleProfile(department.ID_Department)">
